--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
         <img class="post__image" src="./images/image.jpg" alt="Imagem da paisagem de uma cidade com praia">
     </section>
     <section class="post__content">
-        <div class="post__content post__content_heading">
-            <h2 class="post__content_heading">Conheça um pouco mais sobre a localização dos seus amigos</h2>
+        <div>
+            <h2 class="post__content_heading">Conheça um pouco mais sobre<br>a localização dos seus amigos</h2>
         </div>
-        <div class="post__content post__content_subheading">
+        <div>
             <p class="post__content post__content_subheading">Cada pessoa é um artista livre, chamado a transformar as condições, pensamentos e estruturas que moldam nossas vidas.</p>
         </div>
-        <div class="post__content post__content_author">
+        <div>
             <p class="post__content_author">— Joseph Beuys</p>
         </div>
-        <div class="post__content post__content_text">
+        <div>
             <p class="post__content_text">A cidade de TripleTen reuniu profissionais de diversos cantos do mundo. Hoje, a Galeria de Arte TripleTen tem o orgulho de apresentar histórias e fotos de algumas das pessoas que dedicam seu tempo e esforço para fazer com que os futuros profissionais de tecnologia desta cidade se sintam em casa. Cada um de nós tem uma história única sobre o lugar de onde viemos. Sinta-se à vontade para adicionar sua própria história e uma obra de arte visual dedicada à sua cidade natal à nossa coleção. Não importa de onde você é, estamos felizes por você ser nosso vizinho.</p>
         </div>
     </section>
