Adiciona pontos de ruptura

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </section>
     <section class="post__content">
         <div>
-            <h2 class="post__content_heading">Conheça um pouco mais sobre<br>a localização dos seus amigos</h2>
+            <h2 class="post__content_heading">Conheça um pouco mais sobre a localização dos seus amigos</h2>
         </div>
         <div>
             <p class="post__content post__content_subheading">Cada pessoa é um artista livre, chamado a transformar as condições, pensamentos e estruturas que moldam nossas vidas.</p>
