--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
     </section>
     <section class="post__content">
         <div>
-            <h2 class="post__content_heading">Conheça um pouco mais sobre a localização dos seus amigos</h2>
+            <h2 class="post__content post__content_heading">Conheça um pouco mais sobre a localização dos seus amigos</h2>
         </div>
         <div>
             <p class="post__content post__content_subheading">Cada pessoa é um artista livre, chamado a transformar as condições, pensamentos e estruturas que moldam nossas vidas.</p>
         </div>
         <div>
-            <p class="post__content_author">— Joseph Beuys</p>
+            <p class="post__content post__content_author">— Joseph Beuys</p>
         </div>
         <div>
-            <p class="post__content_text">A cidade de TripleTen reuniu profissionais de diversos cantos do mundo. Hoje, a Galeria de Arte TripleTen tem o orgulho de apresentar histórias e fotos de algumas das pessoas que dedicam seu tempo e esforço para fazer com que os futuros profissionais de tecnologia desta cidade se sintam em casa. Cada um de nós tem uma história única sobre o lugar de onde viemos. Sinta-se à vontade para adicionar sua própria história e uma obra de arte visual dedicada à sua cidade natal à nossa coleção. Não importa de onde você é, estamos felizes por você ser nosso vizinho.</p>
+            <p class="post__content post__content_text">A cidade de TripleTen reuniu profissionais de diversos cantos do mundo. Hoje, a Galeria de Arte TripleTen tem o orgulho de apresentar histórias e fotos de algumas das pessoas que dedicam seu tempo e esforço para fazer com que os futuros profissionais de tecnologia desta cidade se sintam em casa. Cada um de nós tem uma história única sobre o lugar de onde viemos. Sinta-se à vontade para adicionar sua própria história e uma obra de arte visual dedicada à sua cidade natal à nossa coleção. Não importa de onde você é, estamos felizes por você ser nosso vizinho.</p>
         </div>
     </section>
 </main>
