--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
             <p class="post__content post__content_text">A cidade de TripleTen reuniu profissionais de diversos cantos do mundo. Hoje, a Galeria de Arte TripleTen tem o orgulho de apresentar histórias e fotos de algumas das pessoas que dedicam seu tempo e esforço para fazer com que os futuros profissionais de tecnologia desta cidade se sintam em casa. Cada um de nós tem uma história única sobre o lugar de onde viemos. Sinta-se à vontade para adicionar sua própria história e uma obra de arte visual dedicada à sua cidade natal à nossa coleção. Não importa de onde você é, estamos felizes por você ser nosso vizinho.</p>
         </div>
     </section>
+    <section class="photo-grid">
+        <img class="photo-grid__item" src="./images/__item.jpg" alt="Foto de uma cidade com praia e montanhas ao fundo">
+        <img class="photo-grid__item" src="./images/__item1.jpg" alt="Foto de uma cidade com o mar ao fundo">
+        <img class="photo-grid__item" src="./images/__item2.jpg" alt="Foto do topo de uma abóboda com céu alaranjado ao fundo">
+        <img class="photo-grid__item" src="./images/__item3.jpg" alt="Foto de uma ponte e uma cidade ao fundo">
+        <img class="photo-grid__item" src="./images/__item4.jpg" alt="Foto de uma casa com montanhas ao fundo">
+        <img class="photo-grid__item" src="./images/__item5.jpg" alt="Foto de um homem em frente a uma casa">
+        <img class="photo-grid__item" src="./images/__item6.jpg" alt="Foto de um jardim com árvores">
+        <img class="photo-grid__item" src="./images/__item7.jpg" alt="Foto de um campo e com uma casa ao fundo">
+
+    </section>
 </main>
 
 <!---------- AQUI COMEÇA O RODAPÉ --------->
