--- a/index.html
+++ b/index.html
@@ -54,33 +54,27 @@
         <img class="photo-grid__item" src="./images/__item7.jpg" alt="Foto de um campo e com uma casa ao fundo">
     </section>
     <section class="places">
-        <div class="places__header">
-            <div class="places__header places__header_title">
-            <h3 class="places__title">Criccieth, País de Gales</h3>
+        <div class="places__content">
+            <div class="places__content places__content_title">
+            <h3 class="places__content places__content_title">Criccieth,<br>País <br>de Gales</h3>
             </div>
-        <div class="places__header places__header_artists">
+        <div class="places__content places__content_image">
+            <img class="places__content_image" src="./images/__image.jpg" alt="Foto de Criccieth, País de Gales">
+        </div>
+        <button class="places__content places__content_button" url="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Compre esta obra de arte como NFT</button>
+        </div>
+        <div class="places__content">
+            <div class="places__header places__header_artists">
             <h4 class="places__header places__header_artists-heading">Artistas</h4>
             <p class="places__header places__header_artists-author">Steffan Warren, editor-chefe</p>
             <p class="places__header places__header_artists-author">Kseniya Glagoleva, gerente de projeto</p>
         </div>
-        </div>
-        <div class="places__content">
-            <div class="places__content places__content_image">
-                <img class="places__content_image" src="./images/image.jpg" alt="Foto de Criccieth, País de Gales">
-            </div>
             <div class="places__content places__content_text">
                 <p class="places__content_text">A ruína medieval do Castelo de Cricieth tem vista para a cidade abaixo de uma rocha que se projeta para o mar. Acredita-se que tenha sido construído por Llewelyn, o Grande, no século XIII. Cerca de 900 anos depois, a auto-intitulada *Pérola de Gales nas margens de Snowdonia* tornou-se um destino turístico popular durante os meses de verão.</p>
                 <p class="places__content_text">A uma curta caminhada da estrada do castelo, você pode desfrutar do melhor sorvete do mundo no Cadwalader's, cujo ingrediente secreto, segundo rumores, são algas marinhas de origem local. Outra reivindicação à fama é o fato de que Criccieth ganhou o prêmio *Wales in Bloom* por cinco anos consecutivos por suas espetaculares exibições florais pela cidade. Foi também a casa de David Lloyd George, o único galês a ocupar o cargo de primeiro-ministro do Reino Unido.</p>
             </div>
         </div>
     </section>
-    <section class="places__content">
-        <div class="places__content_text">
-            <p class="places__content_text">Criccieth é uma cidade costeira no norte do País de Gales, conhecida por suas praias, castelos e paisagens deslumbrantes. É um destino popular para turistas que buscam relaxar e explorar a beleza natural da região.</p>
-        </div>
-        <div class="places__content_image">
-            <img class="places__content_image" src="./images/criccieth.jpg" alt="Foto de Criccieth, País de Gales">
-        </div>
 </main>
 
 <!---------- AQUI COMEÇA O RODAPÉ --------->
