Corrige responsividade posts.css e photo-grid.css

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <img class="place__image" src="./images/__image.jpg" alt="Foto de Criccieth, País de Gales">   
                 <p class="place__texts">A ruína medieval do Castelo de Cricieth tem vista para a cidade abaixo de uma rocha que se projeta para o mar. Acredita-se que tenha sido construído por Llewelyn, o Grande, no século XIII. Cerca de 900 anos depois, a auto-intitulada *Pérola de Gales nas margens de Snowdonia* tornou-se um destino turístico popular durante os meses de verão.</p>
                 <p class="place__texts">A uma curta caminhada da estrada do castelo, você pode desfrutar do melhor sorvete do mundo no Cadwalader's, cujo ingrediente secreto, segundo rumores, são algas marinhas de origem local. Outra reivindicação à fama é o fato de que Criccieth ganhou o prêmio *Wales in Bloom* por cinco anos consecutivos por suas espetaculares exibições florais pela cidade. Foi também a casa de David Lloyd George, o único galês a ocupar o cargo de primeiro-ministro do Reino Unido.</p>
-                <a class="button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Compre esta obra de arte como NFT</a>
+                <button class="button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Compre esta obra de arte como NFT</button>
         </div>
         <div class="place">
                 <h3 class="place__title">Berea, EUA</h3>            
@@ -72,10 +72,10 @@
                 <h4 class="place__artists-heading">Artistas</h4>
                 <p class="place__artists-author">Travis Turner, autor e editor</p>
             </div>    
-                <img class="place__content places__content_image" src="./images/__image1.jpg" alt="Foto de Berea, EUA">
+                <img class="place__image" src="./images/__image1.jpg" alt="Foto de Berea, EUA">
                 <p class="place__texts">Berea é uma pequena cidade localizada na parte central do Kentucky. A cidade é cercada por belas florestas e campos. É conhecida como a capital do artesanato do estado, e os visitantes encontrarão muitas oportunidades de compras: lojas com bijuterias artesanais, velas, artigos de madeira, galerias, ateliês de vidro e muito mais. A cidade realiza um festival anual que celebra o "pão de colher", um prato local feito com pão de milho e servido com uma colher de pau.</p>
                 <p class="place__texts">No entanto, provavelmente é mais conhecido pela faculdade local. O Berea College foi fundado em 1855 e foi o primeiro colégio no sul a ser racialmente integrado, bem como o primeiro a ser misto. De forma um tanto singular, não cobra mensalidades - todo aluno recebe uma bolsa de estudos integral.</p>
-                <a class="button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Compre esta obra de arte como NFT</a>
+                <button class="button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Compre esta obra de arte como NFT</button>
         </div>   
         <div class="place">
                 <h3 class="place__title">Muramvya, Burundi</h3>
@@ -87,7 +87,7 @@
                 <p class="place__texts">Muramvya é uma das 18 províncias de Burundi. Na era do reino, Muramvya era a capital real e em 2007, por causa de sua paisagem cultural e natural, foi adicionada à Lista Provisória do Patrimônio Mundial da UNESCO. Está localizada no centro de Burundi, entre as capitais políticas e econômicas do país.</p>
                 <p class="place__texts">O clima é bastante frio à noite, mas durante o dia, você pensaria que está no céu. A 2.665 metros (8.743 pés) acima do nível do mar, o Monte Teza é um dos lugares mais frios da província. Mas essa brisa fresca permite uma das maiores plantações de chá e café do país, que representam a maior parte das exportações do Burundi.</p>
                 <p class="place__texts">O Parque Nacional de Kibira, uma das maiores reservas de vida selvagem para macacos, se sobrepõe a quatro províncias, incluindo Muramvya. Este Parque Nacional encontra-se no ápice das belas montanhas do Congo-Nile Divide, variando entre 1.550 e 2.660 metros de altitude. Está repleta de uma bela vegetação e fonte para os vários rios e riachos que fornecem água em todo o país.</p>  
-                <a class="button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Compre esta obra de arte como NFT</a>             
+                <button class="button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Compre esta obra de arte como NFT</button>             
         </div>        
         <div class="place">        
                 <h3 class="place__title">Santos, São Paulo</h3>
@@ -98,7 +98,7 @@
                 <img class="place__image" src="./images/__image4.jpg" alt="Foto da cidade de Santos, São Paulo">
                 <p class="place__texts">Santos, no litoral paulista, abriga o maior porto da América Latina, responsável por grande parte da economia da cidade. A cidade também é famosa por ter o maior jardim de orla do mundo, registrado no Guinness World Records. </p>
                 <p class="place__texts">Com cerca de 5,3 km de extensão, ele é repleto de flores e espécies nativas. Além disso, Santos foi o berço de Pelé, considerado o maior jogador de futebol de todos os tempos. A cidade também possui um bonde turístico que percorre o centro histórico, revelando construções preservadas desde o século XIX.</p>  
-                <a class="button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Compre esta obra de arte como NFT</a>             
+                <button class="button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Compre esta obra de arte como NFT</button>             
         </div>
     </section>
 </main>
