Corrige fechamento da div

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <p class="place__artists-author">Renata Arndt</p>
             </div>    
                 <img class="place__image" src="./images/__image4.jpg" alt="Foto da cidade de Santos, São Paulo">
-            <div">
+            <div>
                 <p class="place__texts place__texts_1">Santos, no litoral paulista, abriga o maior porto da América Latina, responsável por grande parte da economia da cidade. A cidade também é famosa por ter o maior jardim de orla do mundo, registrado no Guinness World Records. </p>
                 <p class="place__texts">Com cerca de 5,3 km de extensão, ele é repleto de flores e espécies nativas. Além disso, Santos foi o berço de Pelé, considerado o maior jogador de futebol de todos os tempos. A cidade também possui um bonde turístico que percorre o centro histórico, revelando construções preservadas desde o século XIX.</p>  
             </div>
